dist_man1_MANS=

if BUILD_BITCOIND
  dist_man1_MANS+=cheesecoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=cheesecoin-qt.1
endif

if BUILD_BITCOIN_CLI
  dist_man1_MANS+=cheesecoin-cli.1
endif

if BUILD_BITCOIN_TX
  dist_man1_MANS+=cheesecoin-tx.1
endif

if ENABLE_WALLET
if BUILD_BITCOIN_WALLET
  dist_man1_MANS+=cheesecoin-wallet.1
endif
endif
